<resources>
  <string name="app_name">Project Khronos</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Project Khronos</string>
  <string name="nav_header_subtitle">The Greatest Project Management APP!</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_bottom_nav">BottomNav</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>

  <string name="equipment">Equipment</string>
  <string name="client">Client</string>
  <string name="project">Project</string>
  <string name="event">Event</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="year">Year</string>
  <string name="model">Model</string>
  <string name="make">Make</string>
  <string name="income">Income</string>
  <string name="location">Location</string>
  <string name="expenses">Expenses</string>
  <string name="base_url"></string>
  <string name="client_name">Client\'s name</string>
  <string name="license">License</string>
  <string name="serial_number">Serial Number</string>
  <string name="save">Save</string>
  <string name="description_or_name">Description</string>
  <string name="address">Address</string>
  <string name="description">Description</string>
  <string name="project_name">Name</string>
  <string name="client_id">177970160053-8rnbbhjinkidoe17mq7lutqffopn6o79.apps.googleusercontent.com</string>
  <string name="login_failure">Unable to login, please check your network connection and credentials.</string>
  <string name="sign_out">Sign Out</string>
  <string name="skip_login">Skip Login</string>
  <string name="number_of_items">Number of Items:</string>
  <string name="latitude">Latitude</string>
  <string name="longitude">Longitude</string>
  <string name="end_date_time">End Date/Time</string>
  <string name="start_date_time">Start Date/Time</string>
  <string name="expected_end_date">expected_end_date</string>
  <string name="phone_number">Phone Number</string>
  <string name="alt_phone_number">Alt phone number</string>
  <string name="email">Email</string>
  <string name="billing_address">Billing Address</string>
  <string name="mailing_address">Mailing Address</string>
  <string name="notes">Notes</string>
  <string name="equipment_name">Name</string>
  <string name="identification">Identification</string>
  <string name="oauth2_header">Bearer %s</string>
  <string name="alternate_address">Alternate Address</string>
  <string name="alternate_number">Alternate number</string>
  <string name="clients_number">Client\'s number</string>
  <string name="clients_email">Client\'s email</string>
  <string name="client_save">SAVE</string>
  <string name="client_notes">Notes</string>
  <string name="name">Name</string>
  <string name="license_serial_number">License/Serial Number</string>
  <string name="equipment_save">SAVE</string>
</resources>
