<android.support.v7.widget.CardView
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_marginBottom="2dp"
  android:translationZ="8dp"
  app:cardCornerRadius="10dp"
  app:cardElevation="8dp"
  android:layout_margin="10dp"
  app:cardBackgroundColor="@color/rallyBackground"
  xmlns:android="http://schemas.android.com/apk/res/android">

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edit_text_style"/>
  <android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <android.support.constraint.Guideline
    android:id="@+id/half_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.35"/>

    <TextView
      android:id="@+id/li_client_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/client_name"
      android:textColor="@color/rallyBlue"/>
    <TextView
      android:id="@+id/li_client_phone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/phone_number"
      android:textColor="@color/rallyBlue"/>
    <TextView
      android:id="@+id/li_client_phone_alt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/alt_phone_number"
      android:textColor="@color/rallyBlue"/>
    <TextView
      android:id="@+id/li_client_email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/email"
      android:textColor="@color/rallyBlue"/>

    <TextView
      android:id="@+id/li_client_billing_address"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/billing_address"
      android:textColor="@color/rallyBlue"/>

    <TextView
      android:id="@+id/li_client_mailing_address"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/mailing_address"
      android:textColor="@color/rallyBlue"/>
    <TextView
      android:id="@+id/li_client_notes"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/notes"
      android:textColor="@color/rallyBlue"/>

  </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>