<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/event"
      android:icon="@drawable/ic_event"
      android:title="@string/event"/>
    <item
      android:id="@+id/project"
      android:icon="@drawable/ic_project"
      android:title="@string/project"/>
    <item
      android:id="@+id/client"
      android:icon="@drawable/ic_client"
      android:title="@string/client"/>
    <item
      android:id="@+id/equipment"
      android:icon="@drawable/ic_equipment"
      android:title="@string/equipment"/>
  </group>

  <!--<item android:title="Communicate">-->
    <!--<menu>-->
      <!--<item-->
        <!--android:id="@+id/nav_share"-->
        <!--android:icon="@drawable/ic_menu_share"-->
        <!--android:title="Share"/>-->
      <!--<item-->
        <!--android:id="@+id/nav_send"-->
        <!--android:icon="@drawable/ic_menu_send"-->
        <!--android:title="Send"/>-->
      <!---->
    <!--</menu>-->
  <!--</item>-->
<!--TODO possible future implementaion?-->

</menu>
