<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/event"
    android:icon="@drawable/ic_event"
    android:title="@string/event"
    android:iconTint="@color/rallyGreen"/>

  <item
    android:id="@+id/project"
    android:icon="@drawable/ic_project"
    android:title="@string/project"
    android:iconTint="@color/rallyGreen"/>

  <item
    android:id="@+id/client"
    android:icon="@drawable/ic_client"
    android:title="@string/client"
    android:iconTint="@color/rallyGreen"
    />
  <item
    android:id="@+id/equipmentList"
    android:icon="@drawable/ic_equipment"
    android:title="@string/equipmentList"
    android:titleCondensed="@string/equipmentList"
    android:iconTint="@color/rallyGreen"/>
</menu>
