<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".EventFragment"
  android:background="@color/rallyBackground">


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/expenses"
      style="?android:listSeparatorTextViewStyle"
      android:layout_width="100dp"
      android:layout_height="40sp"
      android:hint="@string/expenses"
      android:inputType="text"
      android:textColor="@color/rallyGreen"
      android:textColorHint="@color/rallyBlue"/>


    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/location"
      style="?android:listSeparatorTextViewStyle"
      android:layout_width="100dp"
      android:layout_height="40sp"
      android:hint="@string/location"
      android:inputType="text"
      android:textColor="@color/rallyGreen"
      android:textColorHint="@color/rallyBlue"/>


    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <android.support.v7.widget.AppCompatEditText
        android:id="@+id/income"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="100dp"
        android:layout_height="40sp"
        android:hint="@string/income"
        android:inputType="text"
        android:textColor="@color/rallyGreen"
        android:textColorHint="@color/rallyBlue"/>


      <Button
        android:id="@+id/event_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    </android.support.design.widget.TextInputLayout>
  </LinearLayout>





</FrameLayout>