<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#FFFFFF"
  android:visibility="visible"
  tools:context=".view.BottomNav">


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/make"
      style="?android:listSeparatorTextViewStyle"
      android:layout_width="100dp"
      android:layout_height="40sp"
      android:hint="@string/make"
      android:inputType="text"/>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/model"
      style="?android:listSeparatorTextViewStyle"
      android:layout_width="100dp"
      android:layout_height="40sp"
      android:hint="@string/model"
      android:inputType="text"/>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <android.support.v7.widget.AppCompatEditText
        android:id="@+id/year"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="100dp"
        android:layout_height="40sp"
        android:hint="@string/year"
        android:inputType="text"/>

      <Button
        android:id="@+id/equipment_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    </android.support.design.widget.TextInputLayout>
  </LinearLayout>

  <Button
    android:id="@+id/save"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="100dp"
    android:background="#FFAAFFAA"
    android:text="Save"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"/>


</android.support.constraint.ConstraintLayout>