<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_marginBottom="2dp"
  android:translationZ="8dp"
  app:cardCornerRadius="10dp"
  app:cardElevation="8dp"
  android:layout_margin="10dp"
  app:cardBackgroundColor="@color/rallyBackground"
  xmlns:android="http://schemas.android.com/apk/res/android">

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edit_text_style"/>

  <android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:paddingTop="4dp"
    android:paddingBottom="4dp">

    <android.support.constraint.Guideline
      android:id="@+id/half_guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.35"/>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Start date"
      android:textColor="@color/rallyBlue"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

    <TextView
      android:id="@+id/li_event_start_date"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/rallyBlue"
      app:layout_constraintLeft_toLeftOf="@id/half_guideline"/>


    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="End date"
      android:textColor="@color/rallyBlue"
      app:layout_constraintTop_toBottomOf="@id/li_event_start_date"/>

    <TextView
      android:id="@+id/li_event_end_date"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/rallyBlue"
      app:layout_constraintLeft_toLeftOf="@id/half_guideline"
      app:layout_constraintTop_toBottomOf="@id/li_event_start_date"/>


    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/expenses"
      android:textColor="@color/rallyBlue"
      app:layout_constraintTop_toBottomOf="@id/li_event_end_date"/>

    <TextView
      android:id="@+id/li_event_expenses"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/rallyBlue"
      app:layout_constraintLeft_toLeftOf="@id/half_guideline"
      app:layout_constraintTop_toBottomOf="@id/li_event_end_date"/>


    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/income"
      android:textColor="@color/rallyBlue"
      app:layout_constraintTop_toBottomOf="@id/li_event_expenses"/>

    <TextView
      android:id="@+id/li_event_income"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/income"
      android:textColor="@color/rallyBlue"
      app:layout_constraintLeft_toLeftOf="@id/half_guideline"
      app:layout_constraintTop_toBottomOf="@id/li_event_expenses"/>


    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/description"
      android:textColor="@color/rallyBlue"
      app:layout_constraintTop_toBottomOf="@id/li_event_income"/>

    <TextView
      android:id="@+id/li_event_description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/description"
      android:textColor="@color/rallyBlue"
      app:layout_constraintLeft_toLeftOf="@id/half_guideline"
      app:layout_constraintTop_toBottomOf="@id/li_event_income"/>


    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/latitude"
      android:textColor="@color/rallyBlue"
      app:layout_constraintTop_toBottomOf="@id/li_event_description"/>

    <TextView
      android:id="@+id/li_event_latitude"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/latitude"
      android:textColor="@color/rallyBlue"
      app:layout_constraintLeft_toLeftOf="@id/half_guideline"
      app:layout_constraintTop_toBottomOf="@id/li_event_description"/>


    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/longitude"
      android:textColor="@color/rallyBlue"
      app:layout_constraintTop_toBottomOf="@id/li_event_latitude"/>

    <TextView
      android:id="@+id/li_event_longitude"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/rallyBlue"
      app:layout_constraintLeft_toLeftOf="@id/half_guideline"
      app:layout_constraintTop_toBottomOf="@id/li_event_latitude"/>

  </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>